[gd_scene load_steps=10 format=2]

[ext_resource path="res://zdm2.glb" type="PackedScene" id=1]
[ext_resource path="res://cube.glb" type="PackedScene" id=3]
[ext_resource path="res://test.gd" type="Script" id=5]
[ext_resource path="res://camera.gd" type="Script" id=6]

[sub_resource type="SpatialMaterial" id=7]
emission_enabled = true
emission = Color( 1, 0.839216, 0.0392157, 1 )
emission_energy = 2.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CubeMesh" id=8]
size = Vector3( 1, 1, 1 )

[sub_resource type="SpatialMaterial" id=9]
emission_enabled = true
emission = Color( 0.0980392, 0.0980392, 0.117647, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.752941, 1, 0.643137, 1 )
metallic = 1.0
roughness = 0.0

[node name="Test" type="Spatial"]
script = ExtResource( 5 )

[node name="ZdmBakeIndirect" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2 )

[node name="ZdmBakeAll" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2 )
visible = false

[node name="ZdmNoBake" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2 )
visible = false

[node name="Sun" type="DirectionalLight" parent="."]
transform = Transform( 0.889832, -0.251497, 0.380722, 0, 0.834387, 0.551179, -0.456289, -0.490456, 0.742464, 4.47302, 6.47568, 8.72305 )
shadow_enabled = true
directional_shadow_max_distance = 85.0

[node name="GrateOmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.9461, -1.33084, -5.52646 )
light_color = Color( 1, 0.905882, 0.470588, 1 )
shadow_enabled = true
omni_range = 10.0
omni_attenuation = 2.0

[node name="GarageOmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 21.6053, -1.96042, -13.798 )
light_color = Color( 0.984314, 0.552941, 1, 1 )
light_energy = 15.0
shadow_enabled = true
omni_range = 10.0
omni_attenuation = 2.0

[node name="CornerSpotLight" type="SpotLight" parent="."]
transform = Transform( 0.909405, -0.0463933, 0.413316, -0.290385, -0.782269, 0.551118, 0.297756, -0.62121, -0.724872, -14.0594, -1.81824, 12.3035 )
light_color = Color( 1, 0, 0, 1 )
light_energy = 14.77
spot_range = 15.0
spot_attenuation = 2.0
spot_angle_attenuation = 0.5

[node name="GlowingBox" parent="." instance=ExtResource( 3 )]
transform = Transform( 1.4, 0, 0, 0, 1, 0, 0, 0, 0.25, -0.681709, -0.108265, 25.4051 )

[node name="Cube" parent="GlowingBox" index="0"]
material/0 = SubResource( 7 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -0.997523, -0.00719588, 0.0699685, -8.94368e-09, 0.994753, 0.102305, -0.0703375, 0.102052, -0.992289, 11.7976, 1.49898, 9.54247 )
script = ExtResource( 6 )

[node name="Box" type="MeshInstance" parent="Camera"]
transform = Transform( 0.999999, -5.12227e-09, 9.68575e-08, 2.79397e-09, 0.999999, 8.9407e-08, 7.45058e-09, -1.11759e-07, 0.999999, -1.4, -0.999998, -3.99998 )
mesh = SubResource( 8 )
material/0 = SubResource( 9 )

[node name="ReflectiveSphere" type="MeshInstance" parent="Camera"]
transform = Transform( -0.997523, -8.41886e-09, -0.0703376, -0.00719589, 0.994753, 0.102052, 0.0699685, 0.102305, -0.992289, 0.16733, -1.22931, -3.81225 )
layers = 2
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="ReflectionProbe" type="ReflectionProbe" parent="Camera/ReflectiveSphere"]
transform = Transform( 1, -8.38189e-09, -8.9407e-08, 5.58791e-09, 1, -5.21541e-07, 4.47035e-08, 1.11759e-07, 1, 0, 0, 0 )
max_distance = 50.0
extents = Vector3( 10, 10, 10 )
box_projection = true
enable_shadows = true

[node name="GIMode" type="Label" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 272.0
margin_bottom = 30.0
text = "Current GI mode: None (Fastest)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReflectionProbeMode" type="Label" parent="."]
margin_left = 16.0
margin_top = 40.0
margin_right = 272.0
margin_bottom = 54.0
text = "Reflection probe:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 16.0
margin_top = 64.0
margin_right = 454.0
margin_bottom = 78.0
text = "Press Space to cycle between GI modes, R to toggle reflection probe
Press Esc or F10 to toggle mouse capture"
__meta__ = {
"_edit_use_anchors_": false
}

[editable path="GlowingBox"]
